Updated 3d-print page

--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -34,7 +34,7 @@ block page
           +wikilink('diy_getting_started') Getting Started
           +wikilink('diy_pcb') Order PCB
           +wikilink('diy_solder') Solder PCB
-          +wikilink('diy_case') 3D print case & buttons
+          +wikilink('diy_case') 3D print parts
           +wikilink('diy_assembly') Assembly
 
         h3 Config
