Updated PCB and solder pages

--- a/src/pug/alpakka/manual/diy_pcb.pug
+++ b/src/pug/alpakka/manual/diy_pcb.pug
@@ -21,8 +21,10 @@ block content
     li Wait until gerber files are processed.
     li Change #[em Remove Order Number] to #[em Specify a location]
     li Enable #[em PCB assembly] section.
+    li Change #[em PCBA Type] to #[em Standard].
+    li Change #[em Assembly side] to #[em Top side] or #[em Both sides] depending on the components you want soldered.
     li Change #[em PCBA Qty] to desired number of PCBs with assembled components (minimum is 2).
-    li Change #[em Tooling holes] to #[em Added by Customer]
+    li Change #[em Tooling holes] / #[em Edge rails] to #[em Added by Customer]
     li Go to next page.
     li Upload BOM and CPL files: #[em jlcpcb_bom.csv] and #[em jlcpcb_cpl.csv]
     li Validate components (it could happen that some are sold out, and you may want to cancel the order).
