--- a/src/pug/alpakka/manual/diy_solder.pug
+++ b/src/pug/alpakka/manual/diy_solder.pug
@@ -8,7 +8,8 @@ block content
   hr
 
   h3 Remaining components
-  p The manufacturing process only soldered the SMD devices on the front side of the PCB, so there are a few extra components to be soldered manually (SMD components on the back, and through-hole components on the front), check which components you need in #[+a('/alpakka/components') Components].
+  p Usually the manufacturing process only soldered some of the SMD components, so there are a few extra components to be soldered manually (trigger switches on the back, and through-hole components on the front), check which components you need in #[+a('/alpakka/components') Components].
+  p (Some of the pictures below are from older PCB versions, but the process is fundamentally the same).
 
   h3 Tools
   p: b Required:
@@ -47,22 +48,22 @@ block content
   img.hm.mt.mr(src='/static/manual/solder_trigger_done.jpg')
   hr
 
-  h3 Solder Raspberry Pi Pico
-  p The Pico board is attached to the main carrier board by soldering the castellated edge pins. This is the most tricky component to solder, do not worry if the end result is not consistent and pretty, all that matters is that the connections work.
-  ol
-    li Place the PCB on the stand.
-    li Apply flux pen to PCB pads and Pico edges.
-    li Place the Pico (carefully centered) and hold it with a piece of tape.
-    li Solder opposite corner pads.
-    li Remove tape.
-    li Solder all the other 36 pads.
-    li Check continuity test points with the multimeter (eg: Pad 16 <-> TP16).
-  img.hm.mt.mr(src='/static/manual/component_rasp_pico.jpg')
-  img.hm.mt.mr(src='/static/manual/solder_pico.jpg')
-  img.hm.mt.mr(src='/static/manual/solder_pico_done.jpg')
-  hr
+  //- h3 Solder Raspberry Pi Pico
+  //- p The Pico board is attached to the main carrier board by soldering the castellated edge pins. This is the most tricky component to solder, do not worry if the end result is not consistent and pretty, all that matters is that the connections work.
+  //- ol
+  //-   li Place the PCB on the stand.
+  //-   li Apply flux pen to PCB pads and Pico edges.
+  //-   li Place the Pico (carefully centered) and hold it with a piece of tape.
+  //-   li Solder opposite corner pads.
+  //-   li Remove tape.
+  //-   li Solder all the other 36 pads.
+  //-   li Check continuity test points with the multimeter (eg: Pad 16 <-> TP16).
+  //- img.hm.mt.mr(src='/static/manual/component_rasp_pico.jpg')
+  //- img.hm.mt.mr(src='/static/manual/solder_pico.jpg')
+  //- img.hm.mt.mr(src='/static/manual/solder_pico_done.jpg')
+  //- hr
 
-  h3 Solder thumbstick
+  h3 Solder thumbsticks
   p The #[em Alps Alpine RKJXV122400R] is held in place to be soldered thanks to the PCB stand. Be sure that the part is flat and there are no gaps before soldering all the pins.
   ol
     li Apply flux pen to PCB holes.
@@ -78,21 +79,21 @@ block content
   img.hm.mt.mr(src='/static/manual/solder_thumbstick_done.jpg')
   hr
 
-  h3 Solder 8-directional switch (D-Hat)
-  p The #[em Alps Alpine RKJXM1015004] is held in place to be soldered thanks to the PCB stand. Be sure that the part is flat and there are no gaps before soldering all the pins.
-  ol
-    li Apply flux pen to PCB holes.
-    li Place the switch on the PCB (front side).
-    li Place the stand on the PCB (front side).
-    li Flip the stand+PCB block.
-    li Check that there is not gap between the switch and the PCB.
-    li Solder just one pin.
-    li Check that the switch position is flat, otherwise resolder first pin.
-    li Solder all the other pins.
-  img.hm.mt.mr(src='/static/manual/component_alps_RKJXM1015004.jpg')
-  img.hm.mt.mr(src='/static/manual/solder_dhat.jpg')
-  img.hm.mt.mr(src='/static/manual/solder_dhat_done.jpg')
-  hr
+  //- h3 Solder 8-directional switch (D-Hat)
+  //- p The #[em Alps Alpine RKJXM1015004] is held in place to be soldered thanks to the PCB stand. Be sure that the part is flat and there are no gaps before soldering all the pins.
+  //- ol
+  //-   li Apply flux pen to PCB holes.
+  //-   li Place the switch on the PCB (front side).
+  //-   li Place the stand on the PCB (front side).
+  //-   li Flip the stand+PCB block.
+  //-   li Check that there is not gap between the switch and the PCB.
+  //-   li Solder just one pin.
+  //-   li Check that the switch position is flat, otherwise resolder first pin.
+  //-   li Solder all the other pins.
+  //- img.hm.mt.mr(src='/static/manual/component_alps_RKJXM1015004.jpg')
+  //- img.hm.mt.mr(src='/static/manual/solder_dhat.jpg')
+  //- img.hm.mt.mr(src='/static/manual/solder_dhat_done.jpg')
+  //- hr
 
   h3 Solder rotary encoder (Scrollwheel)
   p The #[em Alps Alpine EC10E1220503] should stay in place with its own snap-in legs, if that's not the case bend the legs outwards a bit until it does. Be sure that the part is flat and there are no gaps before soldering all the pins.
