--- a/src/pug/alpakka/manual/tune.pug
+++ b/src/pug/alpakka/manual/tune.pug
@@ -19,7 +19,7 @@ block content
   img.wm.mr.mt(src='/static/manual/ctrl_app_settings.png')
 
   hr
-  h3 In the controller
+  h3 Controller shortcuts
 
   ul
     li Hold the #[em Home #[+home]] button.
