--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -36,7 +36,7 @@ block page
           +wikilink('diy_case') 3D print parts
           +wikilink('diy_assembly') Assembly
 
-        h3 Config
+        h3 Setup
         div
           +wikilink('firmware') Firmware
           +wikilink('mouse') Mouse
@@ -71,8 +71,6 @@ block page
           +wikilink('dev') Firmware development
           +wikilink('dev_unix') Setup in Linux
           +wikilink('dev_windows') Setup in Windows
-          div.inactive PCB development #[i (soon)]
-          div.inactive Case mods #[i (soon)]
 
         h3 Other
         div
