Remove not-final warning from in Marmota page

--- a/src/pug/marmota.pug
+++ b/src/pug/marmota.pug
@@ -6,8 +6,8 @@ block title
 block page
   include _device_selector.pug
 
-  div.warning.boxes
-    div: span MARMOTA REFERENCE DESIGN IS NOT YET FINAL
+  //- div.warning.boxes
+  //-   div: span MARMOTA REFERENCE DESIGN IS NOT YET FINAL
 
   div.boxes.grid
     div.box
